--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com</groupId>
 	<artifactId>tl</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
-	<name>tl</name>
+	<name>springboot_integration</name>
 	<description></description>
 
 	<properties>
