添加了jpa配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,16 @@ server: #配置tomcat
 spring:
   datasource: #mysql配置
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://106.12.123.158:3306/tl?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://106.12.123.158:3306/springboot_integration?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource #阿里druid连接池驱动配置信息
     druid:
       initial-size: 1   #初始连接数
       min-idle: 1   #最小连接数
-      max-active: 10   #最大连接数
+      max-active: 10  #最大连接数
+  # jpa配置
+  jpa:
+    hibernate:
+      ddl-auto: update #启动项目创建数据库新表
+    show-sql: true  #日志显示sql
