--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,11 @@
     <name>springboot_integration</name>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <!--mybatisplus版本-->
+        <baomidou.version>3.0.5</baomidou.version>
     </properties>
 
     <dependencies>
@@ -45,6 +49,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${baomidou.version}</version>
         </dependency>
 
         <!--热部署-->
