添加个FastDFS配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,7 +61,25 @@ mybatis-plus:
 swagger:
   enable: true
 
+
+
+fdfs:
+  # 读取时间
+  soTimeout: 1000
+  # 连接超时时间
+  connectTimeout: 2000
+  # 编码默认UTF-8，charset属性不能自定义
+  # charset: UTF-8
+  # 缩略图
+  thumbImage:
+    # 宽
+    width: 150
+    # 高
+    height: 150
+  # tracker列表
+  trackerList: 18.222.197.75:22122
+
+
 ####文件日志配置
 #logging:
 #  path: logs/
-
