--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
 
+        <!--FastDFS依赖-->
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.26.4</version>
+        </dependency>
+
+
         <!--热部署-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -97,11 +105,11 @@
         </dependency>
 
         <!--项目打包-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        <!-- <dependency>
+             <groupId>org.springframework.boot</groupId>
+             <artifactId>spring-boot-starter-tomcat</artifactId>
+             <scope>provided</scope>
+         </dependency>-->
 
 
     </dependencies>
